# thought-graph

./: README.md
mining/: readme.md  requirements.txt
mining/raw_data/blocksworld/: readme.md
mining/raw_data/game24/: readme.md
mining/raw_data/gsm8k/: readme.md
mining/src/RL/: README.md  requirements.txt
mining/src/blocksworld/: failed.py  sucess.py
mining/src/blocksworld/bash/: aggregation_calculation.sh  basic_process.sh  config.json  ctrs_calculation.sh  graph_generation.sh  kl_calculation.sh
mining/src/blocksworld/graph/: split_graph.py
mining/src/blocksworld/jsonl2csv/: jsonl2csv.py
mining/src/blocksworld/success_path/: get_success_path.py
mining/src/frequent_pattern/: config.json  config.py  edge_count_analysis.py  level_analysis.py  main.py  readme.md  run_experiment.sh
mining/src/frequent_pattern/GraMi-master/: Output.txt  run.sh
mining/src/game24/: failed.py  sucess.py
mining/src/game24/bash/: aggregation_calculation.sh  basic_process.sh  ctrs_calculation.sh  graph_generation.sh  kl_calculation.sh
mining/src/game24/graph/: split_graph.py
mining/src/game24/jsonl2csv/: jsonl2csv.py
mining/src/game24/success_path/: get_success_path.py
mining/src/gsm8k/: failed.py  sucess.py
mining/src/gsm8k/bash/: aggregation_calculation.sh  basic_process.sh  config.json  ctrs_calculation.sh  graph_generation.sh  (+1 more)
thought/: .gitignore  README.md  pyproject.toml
thought/src/thought_graph/: __init__.py  analysis.py  functions.py  graph.py  instrument.py  invoke.py  trace.py  utils.py
thought/tests/: test_graph.py  test_query.py  test_trace.py
(+3723 files in other folders)
