[project]
authors = [{name = "RaVincentHuang", email = "18573104293@163.com"}]
name = "thought-graph"
requires-python = ">= 3.10"
version = "0.1.0"
dependencies = ["openai>=2.14.0,<3", "colorlog>=6.10.1,<7", "networkx>=3.6.1,<4"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/thought_graph"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
thought-graph = { path = ".", editable = true }

[tool.pixi.tasks]
install = "pip install --no-deps -e ."
test-import = "python -c \"import thought_graph; print('Import success!')\""
test-query = "python tests/test_query.py"
test-trace = "python tests/test_trace.py"
test-thought = "python tests/test_graph.py"